Replaced old To-Do list with React version

--- a/index.html
+++ b/index.html
@@ -2,21 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TODO List</title>
-    <link rel="stylesheet" href="to-do.css" />
+    <title class="text-3xl font-bold underline">Vite + React</title>
   </head>
   <body>
-    <div class="todo-app">
-      <h1>To-Do List 📝</h1>
-      <div class="todo-input-container">
-        <input type="text" id="todo-input" placeholder="Enter your TODO..." />
-        <button id="add-todo">Add</button>
-      </div>
-      <ul id="todo-list">
-        <li class="checked"></li>
-      </ul>
-    </div>
-    <script src="ex6.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
